--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-<p>@mention</p>
+<p><a>@mention</a>@mention</p>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
